Avoid horizontal scrolling on index page

--- a/static-build/shared/styles/main.css
+++ b/static-build/shared/styles/main.css
@@ -1,15 +1,4 @@
 main {
-  max-width: 1400px;
-  display: grid;
-  gap: 5rem;
-  padding: var(--spacing-5) var(--spacing-3);
-  margin: 0 auto;
-  box-sizing: border-box;
   background: var(--background-gray);
   position: relative;
-
-  @media (min-width: 550px) {
-    gap: 10rem;
-    padding: var(--spacing-7) var(--spacing-6) var(--spacing-3);
-  }
 }
